--- a/styles/opportunities_style/opportunities.scss
+++ b/styles/opportunities_style/opportunities.scss
@@ -1,6 +1,6 @@
 header {
         position: relative;
-        background-color: black;
+        background-color: #00000061;
         height: 100vh;
         min-height: 25rem;
         width: 100%;
@@ -425,14 +425,14 @@ header {
 @media only screen and (max-width: 768px){
 
     header{
-        height: unset;
+        height: 100vh;
         min-height: fit-content;
         .team_img{
             top: 0px;
             // display: unset !important;
         }
         .mobile_title{
-            display: unset !important;
+            // display: unset !important;
         }
     }
 
@@ -447,6 +447,42 @@ header {
         }
     }
 
+    .life_craoyond{
+        .text{
+            margin-bottom: 160px;
+            text-align: center;
+            h1{
+                font-size: 32px;
+            }
+            .description{
+                font-size: 18px;
+            }
+        }
+
+        .row_s{
+            .Rectangle_card_body{
+                width: 100%;
+                height: 200px;
+                .cont{
+                    .card_icon{
+                        margin-bottom: 16px;
+                        width: 60px;
+                        height: 60px;
+                        svg{
+                            width: 24px;
+                        }
+                        img{
+                            width: 24px;
+                        }
+                    }
+                    .card-text{
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    }
+
 }
 
 // Extra small devices (phones, 600px and down) */
@@ -457,6 +493,9 @@ header {
         .team_img{
             top: 0px;
             // display: unset !important;
+        }
+        .text-white{
+            padding-top: 10vh;
         }
         .mobile_title{
             display: unset !important;
@@ -485,9 +524,9 @@ header {
         .text{
             margin-bottom: 160px;
             text-align: center;
-                h1{
-                    font-size: 30px;
-                }
+            h1{
+                font-size: 30px;
+            }
             .description{
                 font-size: 18px;
             }
