--- a/styles/opportunities_style/opportunities.css
+++ b/styles/opportunities_style/opportunities.css
@@ -57,6 +57,11 @@ header .overlay {
   opacity: 0 !important;
 }
 
+.why_us {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(2%, rgba(255, 255, 255, 0)), color-stop(98%, rgba(72, 35, 163, 0.02)));
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 2%, rgba(72, 35, 163, 0.02) 98%);
+}
+
 .why_us .five_c {
   background-color: #fff;
   display: -webkit-box;
@@ -432,6 +437,68 @@ header .overlay {
   margin-right: 30px;
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  header {
+    height: 100vh;
+    min-height: -webkit-fit-content;
+    min-height: -moz-fit-content;
+    min-height: fit-content;
+  }
+  header .team_img {
+    top: 0px;
+  }
+  .floating_section .floatr_card h1 {
+    font-size: 32px;
+  }
+  .floating_section .floatr_card .banner--des {
+    font-size: 19px;
+  }
+  .life_craoyond .text {
+    margin-bottom: 160px;
+    text-align: center;
+  }
+  .life_craoyond .text h1 {
+    font-size: 32px;
+  }
+  .life_craoyond .text .description {
+    font-size: 18px;
+  }
+  .life_craoyond .row_s .Rectangle_card_body {
+    width: 100%;
+    height: 200px;
+  }
+  .life_craoyond .row_s .Rectangle_card_body .cont .card_icon {
+    margin-bottom: 16px;
+    width: 60px;
+    height: 60px;
+  }
+  .life_craoyond .row_s .Rectangle_card_body .cont .card_icon svg {
+    width: 24px;
+  }
+  .life_craoyond .row_s .Rectangle_card_body .cont .card_icon img {
+    width: 24px;
+  }
+  .life_craoyond .row_s .Rectangle_card_body .cont .card-text {
+    font-size: 16px;
+  }
+  .why_us .five_c .img_section {
+    padding-right: 0px;
+  }
+  .why_us .five_c .section_content {
+    min-height: 540px !important;
+    padding-top: 30px;
+  }
+  .look_ambience .text h1 {
+    font-size: 32px;
+  }
+  .opportunities_section .text h1 {
+    font-size: 32px;
+  }
+  .opportunities_section .text .banner--des {
+    font-size: 18px;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   header {
     height: 100vh;
@@ -475,6 +542,22 @@ header .overlay {
   }
   .life_craoyond .row_s .Rectangle_card_body .cont .card-text {
     font-size: 16px;
+  }
+  .why_us .five_c .img_section {
+    padding-right: 0px;
+  }
+  .why_us .five_c .section_content {
+    min-height: 540px !important;
+    padding-top: 30px;
+  }
+  .look_ambience .text h1 {
+    font-size: 32px;
+  }
+  .opportunities_section .text h1 {
+    font-size: 32px;
+  }
+  .opportunities_section .text .banner--des {
+    font-size: 18px;
   }
 }
 
@@ -563,6 +646,8 @@ header .overlay {
     padding: 3px;
   }
   .opportunities_section {
+    padding-left: 16px;
+    padding-right: 16px;
     padding-top: 10%;
     padding-bottom: 10%;
   }
