--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1284,6 +1284,10 @@ body{
         color: $color-white;
         font-size: 3.75rem;
     }
+    p{
+        color: $color-white;
+        font-size: 22px;
+    }
     .button_div{
         padding-top: 30px;
         .banner_button{
@@ -2616,6 +2620,9 @@ body{
             h1{
                 font-size: 2.5rem;
             }
+            p{
+                font-size: 19px;
+            }
         }
         .path-3 {
             right: 9.5%;
@@ -3229,6 +3236,9 @@ body{
           h1 {
             font-size: 2.5rem;
           }
+          p{
+            font-size: 18px;
+        }
       }
       .path-3 {
         right: 9.5%;
