--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1319,6 +1319,11 @@ body {
   font-size: 3.75rem;
 }
 
+.next_billion .billion p {
+  color: #ffffff;
+  font-size: 22px;
+}
+
 .next_billion .billion .button_div {
   padding-top: 30px;
 }
@@ -2671,6 +2676,9 @@ body {
   .next_billion .billion h1 {
     font-size: 2.5rem;
   }
+  .next_billion .billion p {
+    font-size: 19px;
+  }
   .next_billion .path-3 {
     right: 9.5%;
     display: none !important;
@@ -3153,6 +3161,9 @@ body {
   }
   .next_billion .billion h1 {
     font-size: 2.5rem;
+  }
+  .next_billion .billion p {
+    font-size: 18px;
   }
   .next_billion .path-3 {
     right: 9.5%;
