--- a/styles/opportunities_style/opportunities.css
+++ b/styles/opportunities_style/opportunities.css
@@ -62,8 +62,12 @@ header .overlay {
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 2%, rgba(72, 35, 163, 0.02) 98%);
 }
 
+.why_us .section_content {
+  min-height: 540px !important;
+}
+
 .why_us .five_c {
-  background-color: #fff;
+  background-color: transparent !important;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -351,6 +355,11 @@ header .overlay {
   padding: 46px 46px 0px 46px;
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
+}
+
+.opportunities_section .data_row .list_of_jobs {
+  padding-left: 60px;
+  position: relative;
 }
 
 .opportunities_section .data_row .list {
@@ -660,6 +669,32 @@ header .overlay {
   .opportunities_section .data_row {
     padding: 20px 20px 0px 20px;
   }
+  .opportunities_section .data_row .list_of_jobs {
+    padding-left: 30px;
+  }
+  .opportunities_section .data_row i {
+    left: 6px !important;
+    top: 15px !important;
+  }
+  .opportunities_section .data_row button {
+    display: none;
+  }
+  .opportunities_section .data_row .apply_arrow {
+    cursor: pointer;
+    display: block !important;
+    position: absolute;
+    top: 20px;
+    right: 0px;
+    background-color: rgba(103, 92, 215, 0.11);
+    padding: 8px 16px;
+    border-radius: 50px;
+  }
+  .opportunities_section .data_row .apply_arrow:hover {
+    background-color: #675cd7;
+  }
+  .opportunities_section .data_row .apply_arrow:hover path {
+    stroke: #fff;
+  }
   .opportunities_section .data_row .list button {
     padding: 8px 20px;
     margin: auto;
@@ -678,6 +713,15 @@ header .overlay {
   .next_billion .button_div .mail_us {
     margin-right: 0px;
     margin-bottom: 20px;
+  }
+}
+
+@media only screen and (max-width: 321px) {
+  .opportunities_section .list h4 {
+    font-size: 14px !important;
+  }
+  .opportunities_section .list p {
+    font-size: 13px !important;
   }
 }
 /*# sourceMappingURL=opportunities.css.map */
