--- a/styles/opportunities_style/opportunities.scss
+++ b/styles/opportunities_style/opportunities.scss
@@ -9,19 +9,19 @@ $url : "../../images/team.webp";
         background-image: url($webp1x);
       }
     }
-    // @if $url2x {
-    //   @media
-    //   screen and (-webkit-min-device-pixel-ratio: 2),
-    //   screen and (min-resolution: 192dpi),
-    //   screen and (min-resolution: 2dppx) {
-    //     background-image: url($url2x);
-    //     @if $webp2x {
-    //       .webp & {
-    //         background-image: url($webp2x);
-    //       }
-    //     }
-    //   }
-    // }
+    @if $url2x {
+      @media
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+        background-image: url($url2x);
+        @if $webp2x {
+          .webp & {
+            background-image: url($webp2x);
+          }
+        }
+      }
+    }
   }          
   
 
