--- a/styles/opportunities_style/opportunities.css
+++ b/styles/opportunities_style/opportunities.css
@@ -1,6 +1,6 @@
 header {
   position: relative;
-  background-color: #00000061;
+  background-color: #fff;
   height: 100vh;
   min-height: 25rem;
   width: 100%;
