--- a/styles/opportunities_style/opportunities.scss
+++ b/styles/opportunities_style/opportunities.scss
@@ -153,7 +153,7 @@ header {
 .why_us{
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 2%, rgba(72, 35, 163, 0.02) 98%);
     .section_content {
-        min-height: 540px !important;
+        min-height: 450px !important;
         display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden;
     }
     .slider_animation{
@@ -421,6 +421,9 @@ header {
             background-position: bottom;
             background-size: 15px 1.6px;
             background-repeat: repeat-x;
+            .button_write{
+                padding: 12px 27px;
+            }
             button{
                 border-radius: 6px;
                 border: solid 1px #dddddd;
@@ -574,7 +577,7 @@ header {
                 padding-right: 0px;
             }
             .section_content{
-                min-height: 540px !important;
+                min-height: 420px !important;
                 padding-top: 30px;
             }
         }
@@ -671,7 +674,7 @@ header {
                 padding-right: 0px;
             }
             .section_content{
-                min-height: 540px !important;
+                min-height: 380px !important;
                 padding-top: 30px;
             }
         }
@@ -765,7 +768,7 @@ header {
                 padding-right: 0px;
             }
             .section_content{
-                min-height: 580px !important;
+                min-height: 380px !important;
                 padding-top: 30px;
                 .flag{
                     margin: auto auto 24px auto;
