--- a/styles/who-we-are/who_we_are.scss
+++ b/styles/who-we-are/who_we_are.scss
@@ -5,24 +5,25 @@
     padding-bottom: 6%;
     .horizontal_time_line{
         background-color: #353a54;
+        display: inline-table;
         // display: table;
         display: flex;
         overflow-x: auto;
         overflow-y: hidden;
         scroll-behavior: smooth;
         width: 3000px;
-        border-bottom: 2px dotted #fff;
+        border-bottom: 2px dashed #fff;
         .time_line_year{
             // display: inline-block;
             position: relative;
             margin: 100px 0px 0 0px;
             min-height: 302px;
-            // border-left: 2px dotted #fff;
+            // border-left: 2px dashed #fff;
             padding-left: 100px;
             ul{
                 // display: inline-flex;
                 margin-bottom: 0;
-                border-left: 2px dotted #fff;
+                border-left: 2px dashed #fff;
                 display: flex;
                 padding-left: 60px;
                 padding-right: 30px;
@@ -57,7 +58,8 @@
                     left: 20px;
                 }
                 .bottom_content{
-                    width: 346px;
+                    min-width: 306px;
+                    max-width: 306px;
                     position: relative;
                     top: 72px;
                     display: table;
@@ -94,7 +96,8 @@
                     left: -36px;
                 }
                 .top_content{
-                    max-width: 290px;
+                    min-width: 306px;
+                    max-width: 306px;
                     position: relative;
                     top: 0px;
                     left: -50px;
@@ -169,3 +172,129 @@
      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
      background-color: #555;
  }
+
+
+ $particles: 50;
+$width: 500;
+$height: 500;
+
+// Create the explosion...
+$box-shadow: ();
+$box-shadow2: ();
+@for $i from 0 through $particles {
+  $box-shadow: $box-shadow,
+               random($width)-$width / 2 + px
+               random($height)-$height / 1.2 + px
+               hsl(random(360), 100, 50);
+  $box-shadow2: $box-shadow2, 0 0 #fff
+}
+@mixin keyframes ($animationName) {
+    @-webkit-keyframes #{$animationName} {
+        @content;
+    }
+
+    @-moz-keyframes #{$animationName} {
+        @content;
+    }
+
+    @-o-keyframes #{$animationName} {
+        @content;
+    }
+
+    @-ms-keyframes #{$animationName} {
+        @content;
+    }
+
+    @keyframes #{$animationName} {
+        @content;
+    }
+}
+
+@mixin animation-delay ($settings) {
+    -moz-animation-delay: $settings;
+    -webkit-animation-delay: $settings;
+    -o-animation-delay: $settings;
+    -ms-animation-delay: $settings;
+    animation-delay: $settings;
+}
+
+@mixin animation-duration ($settings) {
+    -moz-animation-duration: $settings;
+    -webkit-animation-duration: $settings;
+    -o-animation-duration: $settings;
+    -ms-animation-duration: $settings;
+    animation-duration: $settings;
+}
+
+@mixin animation ($settings) {
+    -moz-animation: $settings;
+    -webkit-animation: $settings;
+    -o-animation: $settings;
+    -ms-animation: $settings;
+    animation: $settings;
+}
+
+@mixin transform ($settings) {
+    transform: $settings;
+    -moz-transform: $settings;
+    -webkit-transform: $settings;
+    -o-transform: $settings;
+    -ms-transform: $settings;
+}
+
+body {
+  margin:0;
+  padding:0;
+  background: #000;
+  overflow: hidden;
+}
+
+.pyro > .before, .pyro > .after {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  box-shadow: $box-shadow2;
+  @include animation((1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards));
+}
+    
+.pyro > .after {
+  @include animation-delay((1.25s, 1.25s, 1.25s));
+  @include animation-duration((1.25s, 1.25s, 6.25s));
+}
+        
+@include keyframes(bang) {
+  to {
+    box-shadow:$box-shadow;
+  }
+}
+    
+@include keyframes(gravity)  {
+  to {
+    @include transform(translateY(200px));
+    opacity: 0;
+  }
+}
+    
+@include keyframes(position) {
+  0%, 19.9% {
+    margin-top: 0%;
+    margin-left: 0%;
+  }
+  20%, 39.9% {
+    margin-top: 4%;
+    margin-left: 0%;
+  }
+  40%, 59.9% {  
+    margin-top: 20%;
+    margin-left: 0%
+  }
+  60%, 79.9% {  
+    margin-top: 30%;
+    margin-left: 0%;
+  }
+  80%, 99.9% {  
+    margin-top: 30%;
+    margin-left: 0%;
+  }
+}
