--- a/styles/who-we-are/who_we_are.scss
+++ b/styles/who-we-are/who_we_are.scss
@@ -3,10 +3,12 @@
     background-color: #353a54;
     padding-top: 6%;
     padding-bottom: 6%;
+    min-height: 100vh;
     .text{
         text-align: center;
         color: #fff;
         font-size: 42px;
+        margin: 0;
     }
     .horizontal_time_line{
         background-color: #353a54;
@@ -31,7 +33,7 @@
                 border-left: 2px dashed #fff;
                 display: flex;
                 padding-left: 60px;
-                padding-right: 30px;
+                margin-right: 30px;
                 min-height: 400px;
                 &:before {
                         content: "";
