--- a/styles/who-we-are/who_we_are.css
+++ b/styles/who-we-are/who_we_are.css
@@ -8,6 +8,9 @@
 
 .time_line_his .text {
   text-align: center;
+}
+
+.time_line_his .text h1 {
   color: #fff;
   font-size: 42px;
   margin: 0;
@@ -214,15 +217,15 @@
 
 @-webkit-keyframes bang {
   to {
-    -webkit-box-shadow: -156px -307.33333px #ff3700, -115px 8.66667px #0062ff, 161px -188.33333px #0091ff, -49px -75.33333px #55ff00, 152px 42.66667px #ff00f2, -87px -156.33333px #c8ff00, 120px -122.33333px #d900ff, -155px -324.33333px #ff0022, -106px 39.66667px #fb00ff, -89px -328.33333px #00ffbb, -158px -28.33333px #bf00ff, 34px -326.33333px #00ffbb, 95px -71.33333px #c4ff00, 70px 8.66667px #ff0051, -141px -330.33333px #a2ff00, -21px 32.66667px #e100ff, -155px -165.33333px #ff00fb, -104px -312.33333px #2bff00, 121px -137.33333px #0015ff, -182px -239.33333px #ccff00, 183px -247.33333px #00a2ff, -21px -144.33333px #009dff, -158px -55.33333px #0015ff, -169px -223.33333px #7b00ff, 68px -297.33333px #ff00fb, -122px -4.33333px #2b00ff, -178px -328.33333px #00ff33, 151px -226.33333px #0015ff, 116px -175.33333px #bf00ff, 95px -137.33333px #002fff, -57px -261.33333px #0004ff, -153px -295.33333px #0026ff, 103px 66.66667px #c800ff, -63px -183.33333px #3700ff, -47px 18.66667px #00ff33, -181px 43.66667px #0051ff, 23px -0.33333px #ffd000, 124px -93.33333px #00ffae, 124px -287.33333px #ffe600, -17px 53.66667px #ffdd00, -51px -293.33333px #ff5900, 77px -142.33333px #0033ff, -180px -75.33333px #ff6600, 97px -318.33333px #ff9d00, -191px -143.33333px #00c8ff, -175px -267.33333px #ff00bb, 183px -9.33333px #ff0009, -117px -249.33333px #33ff00, -127px -262.33333px #0084ff, 86px -76.33333px #ffae00, 151px 64.66667px #00b7ff;
-            box-shadow: -156px -307.33333px #ff3700, -115px 8.66667px #0062ff, 161px -188.33333px #0091ff, -49px -75.33333px #55ff00, 152px 42.66667px #ff00f2, -87px -156.33333px #c8ff00, 120px -122.33333px #d900ff, -155px -324.33333px #ff0022, -106px 39.66667px #fb00ff, -89px -328.33333px #00ffbb, -158px -28.33333px #bf00ff, 34px -326.33333px #00ffbb, 95px -71.33333px #c4ff00, 70px 8.66667px #ff0051, -141px -330.33333px #a2ff00, -21px 32.66667px #e100ff, -155px -165.33333px #ff00fb, -104px -312.33333px #2bff00, 121px -137.33333px #0015ff, -182px -239.33333px #ccff00, 183px -247.33333px #00a2ff, -21px -144.33333px #009dff, -158px -55.33333px #0015ff, -169px -223.33333px #7b00ff, 68px -297.33333px #ff00fb, -122px -4.33333px #2b00ff, -178px -328.33333px #00ff33, 151px -226.33333px #0015ff, 116px -175.33333px #bf00ff, 95px -137.33333px #002fff, -57px -261.33333px #0004ff, -153px -295.33333px #0026ff, 103px 66.66667px #c800ff, -63px -183.33333px #3700ff, -47px 18.66667px #00ff33, -181px 43.66667px #0051ff, 23px -0.33333px #ffd000, 124px -93.33333px #00ffae, 124px -287.33333px #ffe600, -17px 53.66667px #ffdd00, -51px -293.33333px #ff5900, 77px -142.33333px #0033ff, -180px -75.33333px #ff6600, 97px -318.33333px #ff9d00, -191px -143.33333px #00c8ff, -175px -267.33333px #ff00bb, 183px -9.33333px #ff0009, -117px -249.33333px #33ff00, -127px -262.33333px #0084ff, 86px -76.33333px #ffae00, 151px 64.66667px #00b7ff;
+    -webkit-box-shadow: -3px -193.33333px #4000ff, -68px -122.33333px #006aff, -8px -288.33333px #ffee00, 17px -271.33333px #002bff, -46px -227.33333px #ffbb00, 159px -254.33333px #d9ff00, -24px -160.33333px #48ff00, -93px -132.33333px #ff007b, 17px -114.33333px #ccff00, -145px -327.33333px #00ffd5, 162px -82.33333px #0044ff, 110px -229.33333px #00ff66, -104px 19.66667px #95ff00, 49px -151.33333px lime, -195px -284.33333px #99ff00, 2px -33.33333px #ffd500, 110px 32.66667px #00ff09, 43px 27.66667px #d000ff, 154px -141.33333px #ffee00, 99px -113.33333px #ea00ff, 57px 52.66667px #00ff80, 64px -178.33333px #ff0091, 134px -203.33333px #ff0022, 165px 3.66667px #0073ff, 155px -189.33333px #ff3c00, -115px -37.33333px #0048ff, -81px -17.33333px #ffe600, -108px 58.66667px #00ddff, 3px -199.33333px #91ff00, 23px -264.33333px #ff00f2, -81px -306.33333px #bb00ff, -50px -199.33333px #ffb300, 191px -22.33333px #00f2ff, -96px -240.33333px #b3ff00, 46px -102.33333px #ffb700, 188px -106.33333px #ff0011, -86px -223.33333px #22ff00, -46px -297.33333px #ff00c4, 102px -66.33333px #66ff00, 54px -28.33333px #0011ff, -186px -124.33333px #ff0026, -178px -203.33333px #0dff00, -159px 43.66667px #e600ff, 136px -18.33333px #004dff, -188px 44.66667px #ff0066, -84px -253.33333px #ff2600, 95px -173.33333px #008cff, 76px 32.66667px #ff0900, 91px -299.33333px #ff000d, -85px -239.33333px cyan, 44px -268.33333px #4d00ff;
+            box-shadow: -3px -193.33333px #4000ff, -68px -122.33333px #006aff, -8px -288.33333px #ffee00, 17px -271.33333px #002bff, -46px -227.33333px #ffbb00, 159px -254.33333px #d9ff00, -24px -160.33333px #48ff00, -93px -132.33333px #ff007b, 17px -114.33333px #ccff00, -145px -327.33333px #00ffd5, 162px -82.33333px #0044ff, 110px -229.33333px #00ff66, -104px 19.66667px #95ff00, 49px -151.33333px lime, -195px -284.33333px #99ff00, 2px -33.33333px #ffd500, 110px 32.66667px #00ff09, 43px 27.66667px #d000ff, 154px -141.33333px #ffee00, 99px -113.33333px #ea00ff, 57px 52.66667px #00ff80, 64px -178.33333px #ff0091, 134px -203.33333px #ff0022, 165px 3.66667px #0073ff, 155px -189.33333px #ff3c00, -115px -37.33333px #0048ff, -81px -17.33333px #ffe600, -108px 58.66667px #00ddff, 3px -199.33333px #91ff00, 23px -264.33333px #ff00f2, -81px -306.33333px #bb00ff, -50px -199.33333px #ffb300, 191px -22.33333px #00f2ff, -96px -240.33333px #b3ff00, 46px -102.33333px #ffb700, 188px -106.33333px #ff0011, -86px -223.33333px #22ff00, -46px -297.33333px #ff00c4, 102px -66.33333px #66ff00, 54px -28.33333px #0011ff, -186px -124.33333px #ff0026, -178px -203.33333px #0dff00, -159px 43.66667px #e600ff, 136px -18.33333px #004dff, -188px 44.66667px #ff0066, -84px -253.33333px #ff2600, 95px -173.33333px #008cff, 76px 32.66667px #ff0900, 91px -299.33333px #ff000d, -85px -239.33333px cyan, 44px -268.33333px #4d00ff;
   }
 }
 
 @keyframes bang {
   to {
-    -webkit-box-shadow: -156px -307.33333px #ff3700, -115px 8.66667px #0062ff, 161px -188.33333px #0091ff, -49px -75.33333px #55ff00, 152px 42.66667px #ff00f2, -87px -156.33333px #c8ff00, 120px -122.33333px #d900ff, -155px -324.33333px #ff0022, -106px 39.66667px #fb00ff, -89px -328.33333px #00ffbb, -158px -28.33333px #bf00ff, 34px -326.33333px #00ffbb, 95px -71.33333px #c4ff00, 70px 8.66667px #ff0051, -141px -330.33333px #a2ff00, -21px 32.66667px #e100ff, -155px -165.33333px #ff00fb, -104px -312.33333px #2bff00, 121px -137.33333px #0015ff, -182px -239.33333px #ccff00, 183px -247.33333px #00a2ff, -21px -144.33333px #009dff, -158px -55.33333px #0015ff, -169px -223.33333px #7b00ff, 68px -297.33333px #ff00fb, -122px -4.33333px #2b00ff, -178px -328.33333px #00ff33, 151px -226.33333px #0015ff, 116px -175.33333px #bf00ff, 95px -137.33333px #002fff, -57px -261.33333px #0004ff, -153px -295.33333px #0026ff, 103px 66.66667px #c800ff, -63px -183.33333px #3700ff, -47px 18.66667px #00ff33, -181px 43.66667px #0051ff, 23px -0.33333px #ffd000, 124px -93.33333px #00ffae, 124px -287.33333px #ffe600, -17px 53.66667px #ffdd00, -51px -293.33333px #ff5900, 77px -142.33333px #0033ff, -180px -75.33333px #ff6600, 97px -318.33333px #ff9d00, -191px -143.33333px #00c8ff, -175px -267.33333px #ff00bb, 183px -9.33333px #ff0009, -117px -249.33333px #33ff00, -127px -262.33333px #0084ff, 86px -76.33333px #ffae00, 151px 64.66667px #00b7ff;
-            box-shadow: -156px -307.33333px #ff3700, -115px 8.66667px #0062ff, 161px -188.33333px #0091ff, -49px -75.33333px #55ff00, 152px 42.66667px #ff00f2, -87px -156.33333px #c8ff00, 120px -122.33333px #d900ff, -155px -324.33333px #ff0022, -106px 39.66667px #fb00ff, -89px -328.33333px #00ffbb, -158px -28.33333px #bf00ff, 34px -326.33333px #00ffbb, 95px -71.33333px #c4ff00, 70px 8.66667px #ff0051, -141px -330.33333px #a2ff00, -21px 32.66667px #e100ff, -155px -165.33333px #ff00fb, -104px -312.33333px #2bff00, 121px -137.33333px #0015ff, -182px -239.33333px #ccff00, 183px -247.33333px #00a2ff, -21px -144.33333px #009dff, -158px -55.33333px #0015ff, -169px -223.33333px #7b00ff, 68px -297.33333px #ff00fb, -122px -4.33333px #2b00ff, -178px -328.33333px #00ff33, 151px -226.33333px #0015ff, 116px -175.33333px #bf00ff, 95px -137.33333px #002fff, -57px -261.33333px #0004ff, -153px -295.33333px #0026ff, 103px 66.66667px #c800ff, -63px -183.33333px #3700ff, -47px 18.66667px #00ff33, -181px 43.66667px #0051ff, 23px -0.33333px #ffd000, 124px -93.33333px #00ffae, 124px -287.33333px #ffe600, -17px 53.66667px #ffdd00, -51px -293.33333px #ff5900, 77px -142.33333px #0033ff, -180px -75.33333px #ff6600, 97px -318.33333px #ff9d00, -191px -143.33333px #00c8ff, -175px -267.33333px #ff00bb, 183px -9.33333px #ff0009, -117px -249.33333px #33ff00, -127px -262.33333px #0084ff, 86px -76.33333px #ffae00, 151px 64.66667px #00b7ff;
+    -webkit-box-shadow: -3px -193.33333px #4000ff, -68px -122.33333px #006aff, -8px -288.33333px #ffee00, 17px -271.33333px #002bff, -46px -227.33333px #ffbb00, 159px -254.33333px #d9ff00, -24px -160.33333px #48ff00, -93px -132.33333px #ff007b, 17px -114.33333px #ccff00, -145px -327.33333px #00ffd5, 162px -82.33333px #0044ff, 110px -229.33333px #00ff66, -104px 19.66667px #95ff00, 49px -151.33333px lime, -195px -284.33333px #99ff00, 2px -33.33333px #ffd500, 110px 32.66667px #00ff09, 43px 27.66667px #d000ff, 154px -141.33333px #ffee00, 99px -113.33333px #ea00ff, 57px 52.66667px #00ff80, 64px -178.33333px #ff0091, 134px -203.33333px #ff0022, 165px 3.66667px #0073ff, 155px -189.33333px #ff3c00, -115px -37.33333px #0048ff, -81px -17.33333px #ffe600, -108px 58.66667px #00ddff, 3px -199.33333px #91ff00, 23px -264.33333px #ff00f2, -81px -306.33333px #bb00ff, -50px -199.33333px #ffb300, 191px -22.33333px #00f2ff, -96px -240.33333px #b3ff00, 46px -102.33333px #ffb700, 188px -106.33333px #ff0011, -86px -223.33333px #22ff00, -46px -297.33333px #ff00c4, 102px -66.33333px #66ff00, 54px -28.33333px #0011ff, -186px -124.33333px #ff0026, -178px -203.33333px #0dff00, -159px 43.66667px #e600ff, 136px -18.33333px #004dff, -188px 44.66667px #ff0066, -84px -253.33333px #ff2600, 95px -173.33333px #008cff, 76px 32.66667px #ff0900, 91px -299.33333px #ff000d, -85px -239.33333px cyan, 44px -268.33333px #4d00ff;
+            box-shadow: -3px -193.33333px #4000ff, -68px -122.33333px #006aff, -8px -288.33333px #ffee00, 17px -271.33333px #002bff, -46px -227.33333px #ffbb00, 159px -254.33333px #d9ff00, -24px -160.33333px #48ff00, -93px -132.33333px #ff007b, 17px -114.33333px #ccff00, -145px -327.33333px #00ffd5, 162px -82.33333px #0044ff, 110px -229.33333px #00ff66, -104px 19.66667px #95ff00, 49px -151.33333px lime, -195px -284.33333px #99ff00, 2px -33.33333px #ffd500, 110px 32.66667px #00ff09, 43px 27.66667px #d000ff, 154px -141.33333px #ffee00, 99px -113.33333px #ea00ff, 57px 52.66667px #00ff80, 64px -178.33333px #ff0091, 134px -203.33333px #ff0022, 165px 3.66667px #0073ff, 155px -189.33333px #ff3c00, -115px -37.33333px #0048ff, -81px -17.33333px #ffe600, -108px 58.66667px #00ddff, 3px -199.33333px #91ff00, 23px -264.33333px #ff00f2, -81px -306.33333px #bb00ff, -50px -199.33333px #ffb300, 191px -22.33333px #00f2ff, -96px -240.33333px #b3ff00, 46px -102.33333px #ffb700, 188px -106.33333px #ff0011, -86px -223.33333px #22ff00, -46px -297.33333px #ff00c4, 102px -66.33333px #66ff00, 54px -28.33333px #0011ff, -186px -124.33333px #ff0026, -178px -203.33333px #0dff00, -159px 43.66667px #e600ff, 136px -18.33333px #004dff, -188px 44.66667px #ff0066, -84px -253.33333px #ff2600, 95px -173.33333px #008cff, 76px 32.66667px #ff0900, 91px -299.33333px #ff000d, -85px -239.33333px cyan, 44px -268.33333px #4d00ff;
   }
 }
 
@@ -291,6 +294,55 @@
   80%, 99.9% {
     margin-top: 30%;
     margin-left: 0%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .time_line_his .horizontal_time_line {
+    width: auto;
+  }
+  .time_line_his .horizontal_time_line .time_line_year {
+    margin: 60px 0px 0 0px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .time_line_his .text h1 {
+    font-size: 2.1rem;
+  }
+  .time_line_his .horizontal_time_line {
+    width: auto;
+  }
+  .time_line_his .horizontal_time_line .time_line_year {
+    padding-left: 6px;
+    margin: 60px 0px 0 0px;
+  }
+  .time_line_his .horizontal_time_line .time_line_year ul {
+    padding-left: 50px;
+  }
+  .time_line_his .horizontal_time_line .time_line_year ul .year_title {
+    top: -38px;
+  }
+  .time_line_his .horizontal_time_line .time_line_year ul:before {
+    left: 6px;
+  }
+  .time_line_his .horizontal_time_line .time_line_year ul:after {
+    left: -12px;
+  }
+  .time_line_his .horizontal_time_line .time_line_year ul .bottom_content {
+    min-width: 260px;
+  }
+  .time_line_his .horizontal_time_line .time_line_year ul .top_content {
+    min-width: 260px;
+  }
+}
+
+@media only screen and (max-width: 321px) {
+  .time_line_his .horizontal_time_line {
+    width: auto;
+  }
+  .time_line_his .horizontal_time_line .time_line_year {
+    margin: 60px 0px 0 0px;
   }
 }
 /*# sourceMappingURL=who_we_are.css.map */
