--- a/styles/who-we-are/who_we_are.scss
+++ b/styles/who-we-are/who_we_are.scss
@@ -6,9 +6,11 @@
     min-height: 100vh;
     .text{
         text-align: center;
-        color: #fff;
-        font-size: 42px;
-        margin: 0;
+        h1{
+            color: #fff;
+            font-size: 42px;
+            margin: 0;
+        }
     }
     .horizontal_time_line{
         background-color: #353a54;
@@ -297,4 +299,90 @@ $box-shadow2: ();
     margin-top: 30%;
     margin-left: 0%;
   }
+}
+
+
+
+
+// All media qurys
+
+@media only screen and (min-width: 1200px){
+
+}
+
+// Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) and (max-width: 1199px){
+
+}
+
+// Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 991px){
+    
+
+}
+
+// Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    
+}
+
+@media only screen and (max-width: 768px){
+    .time_line_his{
+        
+        .horizontal_time_line{
+            width: auto;
+            .time_line_year{
+                margin: 60px 0px 0 0px;
+            }
+        }
+    }
+}
+
+// Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 767px){
+    .time_line_his{
+        .text{
+            h1{   
+                font-size: 2.1rem;
+            }
+        }
+        .horizontal_time_line{
+            width: auto;
+            .time_line_year{
+                padding-left: 6px;
+                margin: 60px 0px 0 0px;
+                ul{
+                    padding-left: 50px;
+                    .year_title{
+                        top: -38px;
+                    }
+                    &:before {
+                            left: 6px;
+                        }
+                    &:after {
+                        left: -12px;
+                    }
+                    .bottom_content {
+                        min-width: 260px;
+                    }
+                    .top_content {
+                        min-width: 260px;
+                    }
+                }
+            }
+        }
+    }
+    
+}
+
+@media only screen and (max-width: 321px){
+    .time_line_his{
+        .horizontal_time_line{
+            width: auto;
+            .time_line_year{
+                margin: 60px 0px 0 0px;
+            }
+        }
+    }
+    
 }
